# cmakenote

./: CMakeLists.txt  README.md  main.cpp
_builds/: CMakeCache.txt  Makefile  cmake_install.cmake
